# stopwatch

./: README.md  pyproject.toml
riguima_stopwatch/: main.py
