[tool.poetry]
name = "stopwatch"
version = "0.1.0"
description = "Crônometro feito do repositório app ideas: https://github.com/florinpop17/app-ideas"
authors = ["Richard <richard.alexsander.guima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.40.0"


[tool.poetry.group.dev.dependencies]
textual-dev = "^1.2.1"
ruff = "^0.1.1"
isort = "^5.12.0"
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
